--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@public/*": ["public/*"],
       "@components/*": ["components/*"],
       "@models/*": ["models/*"],
-      "@helpers/*": ["helpers/*"]
+      "@utils/*": ["utils/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
