--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "next dev",
